--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -38,7 +38,7 @@ Most of the features provided by the _cqrs4j_ framework are optional and require
 Below is a table of additional features and the extra dependencies you need:
 || *Feature* || *Dependency* ||
 || [EventSourcing Event sourcing] || com.thoughtworks.xstream:xstream:1.3.1 ||
-|| [TransactionalHandlers Transaction aware event handler adapters] || org.springframework:spring-tx:3.0.0.RELEASE ||
+|| [AnnotationSupport#Adding_transaction_support Transaction aware event handler adapters] || org.springframework:spring-tx:3.0.0.RELEASE ||
 || [SpringIntegrationSupport Spring Integration support] || org.springframework.integration:spring-integration-core:1.0.3.RELEASE |||
 
 Note: the version numbers are the ones _cqrs4j_ has been tested with. Other versions might work, but might not.
