Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,3 +1,5 @@
-Table of contents
+#Summary Table of contents
+
+=Table of contents=
  * [GettingStarted Getting Started]
  * [AnnotationSupport Annotation Support]
