Edited wiki page through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,6 +1,6 @@
 #summary Getting started guide
 #labels Featured,Priority-1
-
+#sidebar TableOfContents
 
 <wiki:toc max_depth="2" />
 = Obtaining necessary libraries =
