--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,5 +1,5 @@
 #summary Table of contents
 
-=Table of contents=
+Table of contents
  * [GettingStarted Getting Started]
  * [AnnotationSupport Annotation Support]
