--- a/wiki/AnnotationSupport.wiki
+++ b/wiki/AnnotationSupport.wiki
@@ -1,5 +1,7 @@
 #summary Overview of the annotation support features of cqrs4j
 #labels Featured,Priority-2
+#sidebar TableOfContents
+
 <wiki:toc max_depth="2" />
 
 = Introduction =
