Edited wiki page through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,3 +3,5 @@
 Table of contents
  * [GettingStarted Getting Started]
  * [AnnotationSupport Annotation Support]
+ * [SpringIntegrationSupport Spring Integration Support]
+ * [EventSourcing Event Sourcing Support]
